--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: Service
 metadata: 
   name: closet-api-service
-  namespace: closet-dev
+  namespace: closet-dev   # ✅ must match your deployment
 spec:
-  type: NodePort
+  type: NodePort          # ✅ fine for Minikube, lets you access from outside
   selector:
-    app: closet-api
+    app: closet-api       # ✅ must match your deployment labels
   ports:
-    - port: 8080
-      targetPort: 8080
-      nodePort: 30080
+    - port: 8080          # Service port (inside cluster)
+      targetPort: 8080    # Container port (your Spring Boot app)
+      nodePort: 30080     # External port on Minikube (http://<minikube-ip>:30080)
+      protocol: TCP
